shipit/api: add releaseduty API
